--- a/css/styles.css
+++ b/css/styles.css
@@ -553,6 +553,10 @@ address a {
 }
 
 /* ------Footer Join----------- */
+.footer-join {
+  margin-top: 12px;
+}
+
 .footer-join-text {
   margin-bottom: 20px;
 
@@ -561,9 +565,6 @@ address a {
   letter-spacing: 0.03em;
 }
 /* -----------socials----------- */
-.footer-join {
-  margin-top: 12px;
-}
 
 .footer-icons {
   display: flex;
@@ -707,7 +708,7 @@ address a {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 100;
+  /* z-index: 100; */
 
   width: 100%;
   height: 100%;
@@ -732,6 +733,7 @@ address a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding: 40px;
 
   width: 528px;
   height: 581px;
@@ -757,6 +759,192 @@ address a {
   right: 0;
   transform: translate(-8px, 8px);
 }
+
+.icon-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover .icon-close,
+.modal-btn:focus .icon-close {
+  fill: var(--accent-color);
+}
+
+/* -----------Form Footer Subscription------------ */
+.footer-form {
+  display: flex;
+  align-items: flex-end;
+  gap: 12px;
+  min-width: 570px;
+  height: 86px;
+  margin-left: 96px;
+  margin-top: 12px;
+}
+.form-fild-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 358px;
+}
+
+.footer-form-label {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.footer-form-input {
+  height: 50px;
+  padding: 15px 16px;
+  display: flex;
+  align-items: center;
+
+  font-size: 16px;
+  line-height: 1.25;
+
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: var(--bg-color-grey);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  outline: none;
+}
+
+.footer-form-btn {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  min-width: 200px;
+  height: 50px;
+  padding: 16px 28px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+}
+
+/* -----------Form Data------------ */
+.form-data {
+  max-width: 448px;
+  margin-left: auto;
+  margin-right: auto;
+  /* outline: 1px solid #212121; */
+}
+
+.form-title {
+  margin-bottom: 12px;
+
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-field.textarea {
+  margin-bottom: 20px;
+}
+
+.form-field.data input {
+  padding: 11px 12px 11px 42px;
+
+  outline: none;
+  cursor: pointer;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field.data input:hover,
+.form-field.data input:focus,
+.form-field.data textarea:hover,
+.form-field.data textarea:focus {
+  border-color: var(--accent-color);
+}
+
+.textarea-data {
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: none;
+
+  cursor: pointer;
+  resize: none;
+}
+.textarea-data::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.label-data {
+  margin-bottom: 4px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+}
+
+.label-data-policy {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.label-data-policy a {
+  color: var(--accent-color);
+}
+
+.form-field-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-bottom: 30px;
+}
+
+.button-form-submit {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 200px;
+  height: 50px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border-color: transparent;
+}
+
+.form-field-checkbox-input {
+}
+
 /* шрифты портфолио*/
 /* основной шрифт Roboto 400,500,700,*/
 /* шрифт для лого Raleway 700 */
