--- a/css/styles.css
+++ b/css/styles.css
@@ -854,13 +854,14 @@ address a {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
+  position: relative;
 }
 
 .form-field.textarea {
   margin-bottom: 20px;
 }
 
-.form-field.data input {
+.form-field-input {
   padding: 11px 12px 11px 42px;
 
   outline: none;
@@ -869,8 +870,19 @@ address a {
   border-radius: 4px;
 }
 
-.form-field.data input:hover,
-.form-field.data input:focus,
+.icon-form-item {
+  position: absolute;
+  top: 28px;
+  left: 12px;
+}
+
+.form-field-input:focus + .icon-form-item,
+.form-field-input:hover + .icon-form-item {
+  fill: var(--accent-color);
+}
+
+.form-field-input:focus,
+.form-field-input:hover,
 .form-field.data textarea:hover,
 .form-field.data textarea:focus {
   border-color: var(--accent-color);
@@ -906,6 +918,8 @@ address a {
 }
 
 .label-data-policy {
+  padding-left: 29px;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -917,11 +931,32 @@ address a {
 }
 
 .form-field-checkbox {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
-
   margin-bottom: 30px;
+  position: relative;
+}
+
+.check-box {
+  position: absolute;
+  top: 4px;
+  left: 6px;
+  display: flex;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+  outline: 2px solid var(--title-text-color);
+  outline-offset: -2px;
+  border-radius: 2px;
+
+  transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field-checkbox-input:checked + .check-box {
+  outline-color: var(--accent-color);
+  background-color: var(--accent-color);
 }
 
 .button-form-submit {
