--- a/css/styles.css
+++ b/css/styles.css
@@ -764,7 +764,6 @@ address a {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-btn:hover .icon-close,
 .modal-btn:focus .icon-close {
   fill: var(--accent-color);
 }
@@ -873,7 +872,7 @@ address a {
 .form-field-input {
   padding: 11px 12px 11px 42px;
 
-  outline: none;
+  outline: 1px solid transparent;
   cursor: pointer;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
